--- a/app/src/main/res/layout/item_log_recycler.xml
+++ b/app/src/main/res/layout/item_log_recycler.xml
@@ -5,11 +5,13 @@
 
     <TextView
         android:id="@+id/item_text"
-        android:layout_margin="3dp"
-        android:paddingLeft="5dp"
-        android:textSize="14sp"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content" />
+        android:layout_height="wrap_content"
+        android:layout_margin="3dp"
+        android:paddingStart="5dp"
+        android:paddingEnd="5dp"
+        android:textColor="#000"
+        android:textSize="14sp" />
 
 
 </LinearLayout>
