--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -20,18 +20,12 @@
         android:orientation="horizontal">
 
         <Button
-            android:id="@+id/startBtn"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_margin="5dp"
-            android:text="Start" />
-
-        <Button
             android:id="@+id/cleanBtn"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_margin="5dp"
-            android:text="Clean" />
+            android:textAllCaps="false"
+            android:text="Refresh" />
     </LinearLayout>
 
 
